--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
 # defaults file for ansible-role-dss
+dss_base_repository_url: https://cdn.downloads.dataiku.com/public/studio
 dss_version: "10.0.7"
 dss_api_version: "5.1"
 dss_service_user: dataiku
