Changed python version to make it compatible with dataiku-ansible-modules Corrected DSS data dir to use variable Reactivated license file copy which is mandatory for settings configuration Ignore ldap settings step errors as no license is provided in CI

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,7 +5,7 @@ driver:
   name: docker
 platforms:
   - name: instance
-    image: python:slim-buster
+    image: python:3.7.13-slim-buster
     pre_build_image: true
 provisioner:
   name: ansible    
