Ensire DSS datadir configurations consistency

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -38,7 +38,7 @@
 - name: Run the Dataiku DSS installer
   become: true
   become_user: "{{dss_service_user}}"
-  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/installer.sh -d {{dss_data_dirs_location}} -p {{port}} -t {{type}}"
+  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/installer.sh -d /home/{{dss_service_user}}/{{datadir}} -p {{port}} -t {{type}}"
   args:
     creates: "/home/{{dss_service_user}}/{{datadir}}/dss-version.json"
   tags: [dss]
@@ -53,7 +53,7 @@
 
 - name: Install boot service
   become: true
-  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/scripts/install/install-boot.sh -n {{datadir}} /home/dataiku/{{datadir}} dataiku"
+  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/scripts/install/install-boot.sh -n {{datadir}} /home/{{dss_service_user}}/{{datadir}} dataiku"
   args:
     creates: "/etc/init.d/dataiku.{{datadir}}"
   tags: [dss]
