--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,7 +8,15 @@ platforms:
     image: python:3.7.13-slim-buster
     pre_build_image: true
 provisioner:
-  name: ansible    
+  name: ansible
+  inventory:
+    host_vars:
+      instance:
+        ansible_python_interpreter: "/usr/local/bin/python3"
 verifier:
   name: ansible
+  inventory:
+    host_vars:
+      instance:
+        ansible_python_interpreter: "/usr/local/bin/python3"
 
