Write an empty license file to avoid  file copy error in CI

--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -13,4 +13,5 @@ jobs:
       - name: Test with molecule
         run: |
           ansible-galaxy install -r requirements.yml
+          echo {} > license.json
           molecule test
