--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Test with molecule
         run: |
           ansible-galaxy install -r requirements.yml
-          echo {} > license.json
+          echo ${{ secrets.LICENSE }} > license.json
           molecule test
