Feature LDAP authentication (#1)
* Automated ldap configuration

* Changed python version to make it compatible with dataiku-ansible-modules
Corrected DSS data dir to use variable
Reactivated license file copy which is mandatory for settings configuration
Ignore ldap settings step errors as no license is provided in CI

* Ensire DSS datadir configurations consistency

* Forced python executor to avoid conflicts in python:3.7.13-slim-buster image
Avoid conflict between distro python3 package installed by DSS and custom python executor provided by image

* Write an empty license file to avoid  file copy error in CI

* Use license stored as github secret to avoid 500 error when configuring LDAP

* Added missing quotes

* Corrected license file creation from github secret

--- a/.github/workflows/molecule-ci.yml
+++ b/.github/workflows/molecule-ci.yml
@@ -10,6 +10,11 @@ jobs:
         run: |
           python3 -m pip install --upgrade pip setuptools
           python3 -m pip install --upgrade ansible molecule molecule-docker
+      - name: Write license file without logging its content
+        run: 'echo "$LICENSE" > license.json'
+        shell: bash
+        env:
+          LICENSE: ${{ secrets.LICENSE }}
       - name: Test with molecule
         run: |
           ansible-galaxy install -r requirements.yml
