--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -43,17 +43,17 @@
     creates: "/home/{{dss_service_user}}/{{datadir}}/dss-version.json"
   tags: [dss]
 
-# - name: Copy license file
-#   become: true
-#   become_user: "{{dss_service_user}}"
-#   copy:
-#     src: "{{dss_license_file}}"
-#     dest: "/home/{{dss_service_user}}/{{datadir}}/config/license.json"
-#   tags: [dss]
+- name: Copy license file
+  become: true
+  become_user: "{{dss_service_user}}"
+  copy:
+    src: "{{dss_license_file}}"
+    dest: "/home/{{dss_service_user}}/{{datadir}}/config/license.json"
+  tags: [dss]
 
 - name: Install boot service
   become: true
-  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/scripts/install/install-boot.sh -n {{datadir}} /home/dataiku/{{datadir}} dataiku"
+  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/scripts/install/install-boot.sh -n {{datadir}} /home/{{dss_service_user}}/{{datadir}} dataiku"
   args:
     creates: "/etc/init.d/dataiku.{{datadir}}"
   tags: [dss]
@@ -64,13 +64,4 @@
     name: "dataiku.{{datadir}}"
     state: started
     enabled: true
-  tags: [dss]
-
-- name: Retrieve API Credentials
-  become: true
-  become_user: "{{dss_service_user}}"
-  dss_get_credentials:
-    datadir: "/home/dataiku/{{datadir}}"
-    api_key_name: ansible
-  register: dss_connection_info
   tags: [dss]
