--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -6,4 +6,4 @@
       include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
-        dataiku_user_home: /home/dataiku
+        dss_version: "10.0.7"
