--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -38,9 +38,9 @@
 - name: Run the Dataiku DSS installer
   become: true
   become_user: "{{dss_service_user}}"
-  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/installer.sh -d /home/{{dss_service_user}}/{{datadir}} -p {{port}} -t {{type}}"
+  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/installer.sh -d {{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}} -p {{port}} -t {{type}}"
   args:
-    creates: "/home/{{dss_service_user}}/{{datadir}}/dss-version.json"
+    creates: "{{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}}/dss-version.json"
   tags: [dss]
 
 - name: Copy license file
@@ -48,12 +48,12 @@
   become_user: "{{dss_service_user}}"
   copy:
     src: "{{dss_license_file}}"
-    dest: "/home/{{dss_service_user}}/{{datadir}}/config/license.json"
+    dest: "{{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}}/config/license.json"
   tags: [dss]
 
 - name: Install boot service
   become: true
-  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/scripts/install/install-boot.sh -n {{datadir}} /home/{{dss_service_user}}/{{datadir}} dataiku"
+  command: "{{dss_install_dir_location}}/dataiku-dss-{{dss_version}}/scripts/install/install-boot.sh -n {{datadir}} {{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}} dataiku"
   args:
     creates: "/etc/init.d/dataiku.{{datadir}}"
   tags: [dss]
