--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -39,6 +39,14 @@
     state: present
   tags: [setup, dss-setup]
 
+- name: Allow the admin executing playbook to run any commands as DSS service user
+  community.general.sudoers:
+    name: enable-sudoer-admin-runas-dss-account
+    state: present
+    user: "{{ ansible_user_id }}"
+    runas: "{{ dss_service_user }}"
+    commands: ALL
+
 - name: Create dss install directory
   become: true
   file:
@@ -51,7 +59,7 @@
 - name: Create dss data directory
   become: true
   file:
-    path: "/home/{{dss_service_user}}/{{datadir}}"
+    path: "{{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}}"
     state: directory
     owner: "{{dss_service_user}}"
     mode: "u=rwx,g=,o="
