--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -14,9 +14,10 @@
 
 - name: Disable SELinux
   become: true
-  selinux:
+  ansible.posix.selinux:
     state: disabled
-  ignore_errors: yes
+  register: result
+  failed_when: result.msg | default('ok', True) is not search('(^ok$|libselinux-python|(SELinux state changed))')
   tags: [setup]
 
 - name: Increase system limits as required by DSS
@@ -39,6 +40,15 @@
     state: present
   tags: [setup, dss-setup]
 
+- name: Allow the admin executing playbook to run any commands as DSS service user
+  community.general.sudoers:
+    name: enable-sudoer-admin-runas-dss-account
+    state: present
+    user: "{{ ansible_user_id }}"
+    runas: "{{ dss_service_user }}"
+    commands: ALL
+  when: ansible_user_id != 'root'
+
 - name: Create dss install directory
   become: true
   file:
@@ -51,7 +61,7 @@
 - name: Create dss data directory
   become: true
   file:
-    path: "/home/{{dss_service_user}}/{{datadir}}"
+    path: "{{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}}"
     state: directory
     owner: "{{dss_service_user}}"
     mode: "u=rwx,g=,o="
