--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -72,6 +72,8 @@
   become: true
   become_user: "{{dss_service_user}}"
   command: "{{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}}/bin/dssadmin install-hadoop-integration -standaloneArchive {{dss_install_dir_location}}/{{dss_hadoop_package}}"
+  args:
+    creates: "{{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}}/bin/env-hadoop.sh"
   tags: [dss]
 
 - name: Download Spark package
@@ -88,6 +90,8 @@
   become: true
   become_user: "{{dss_service_user}}"
   command: "{{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}}/bin/dssadmin install-spark-integration -standaloneArchive {{dss_install_dir_location}}/{{dss_spark_package}}"
+  args:
+    creates: "{{dss_service_user_home_basedir}}/{{dss_service_user}}/{{datadir}}/bin/env-spark.sh"
   tags: [dss]
 
 - name: Start the studios
