Reverted CI conf and added python2-minimal as new dependency to make /usr/bin/python2 available in target

--- a/tasks/pre_install/debian.yml
+++ b/tasks/pre_install/debian.yml
@@ -17,6 +17,7 @@
       - default-jre-headless
       - python2.7 
       - libpython2.7 
+      - python2-minimal
       - libfreetype6 
       - libgomp1
 
