--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -12,21 +12,22 @@
 
 # Default package manager in Centos 7 is YUM
 - name: Enable EPEL Repository on CentOS 7
+  become: true
   yum:
     name: epel-release
     state: latest
-  become: True
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
 
 # Default package manager in Centos 8 is DNF
 - name: Enable EPEL Repository on CentOS 8
+  become: true
   dnf:
     name: epel-release
     state: latest
-  become: True
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
 
 - name: Installing dependencies
+  become: true
   yum:
     name: "{{ packages }}"
     state: present
@@ -41,6 +42,7 @@
       - java-1.8.0-openjdk
 
 - name: Installing CentOS 7 sepecific packages
+  become: true
   yum:
     name: "{{ packages }}"
     state: present
@@ -50,10 +52,10 @@
       - freetype 
       - libgfortran 
       - libgomp
-  become: True
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
 
 - name: Installing CentOS 8 sepecific packages
+  become: true
   yum:
     name: "{{ packages }}"
     state: present
@@ -65,5 +67,4 @@
       - freetype 
       - libgfortran 
       - libgomp
-  become: True
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
