--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -37,7 +37,7 @@
   user:
     name: "{{dss_service_user}}"
     home: "{{dss_service_user_home_basedir}}/{{dss_service_user}}"
-    shell: "/bin/bash"
+    shell: "{{dss_service_user_shell}}"
     state: present
   tags: [setup, dss-setup]
 
