Fix/user config and ci issues (#5)
- Added missing become:true when installing dependencies
- Reordered statements to make become: true more visible
- Reverted sudo permissions to allow non-root user to become dataiku service user
- Variabilized dss service user shell
- Forced ansible==5.9.0 to get rid of **dataiku-ansible-modules** python2 issue in CI environment
- Changed CI base image to **debian:buster** to reflect target environment and avoid python conflicts
- Update APT cache before trying to install new packages

--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -37,7 +37,7 @@
   user:
     name: "{{dss_service_user}}"
     home: "{{dss_service_user_home_basedir}}/{{dss_service_user}}"
-    shell: "/bin/bash"
+    shell: "{{dss_service_user_shell}}"
     state: present
   tags: [setup, dss-setup]
 
@@ -46,10 +46,9 @@
   community.general.sudoers:
     name: enable-sudoer-admin-runas-dss-account
     state: present
-    group: "{{ dss_service_user_allowed_sudoers_group }}"
+    user: "{{ ansible_user_id }}"
     runas: "{{ dss_service_user }}"
     commands: ALL
-  when: dss_service_user_allowed_sudoers_group|length > 0
 
 - name: Create dss install directory
   become: true
