--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -4,11 +4,8 @@ dss_base_repository_url: https://cdn.downloads.dataiku.com/public/studio
 dss_version: "10.0.7"
 dss_api_version: "5.1"
 dss_service_user: dataiku
+dss_service_user_shell: "/bin/bash"
 dss_service_user_home_basedir: /home
-
-# Group allowed to become dss service user. Useful when connecting to the ansible host as a non-root but sudo allowed user.
-dss_service_user_allowed_sudoers_group: "sudo"
-
 dss_install_dir_location: /opt/dataiku
 dss_node_poll_fqdn: true # If true, use ansible_fqdn else use ansible_host
 dss_license_file: license.json
