--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,6 +7,9 @@ platforms:
   - name: molecule-debian10
     image: ${MOLECULE_IMAGE:-docker.io/debian:buster}
     pre_build_image: false
+  - name: molecule-centos7
+    image: ${MOLECULE_IMAGE:-docker.io/centos:7}
+    pre_build_image: false
 provisioner:
   name: ansible
   inventory:
