Moved sudo install in OS specific pre_install files

--- a/tasks/pre_install/debian.yml
+++ b/tasks/pre_install/debian.yml
@@ -1,4 +1,11 @@
 ---
+- name: Installing sudo package
+  apt:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
+      - sudo
 
 - name: Installing dependencies
   become: true
