--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -1,16 +1,13 @@
 ---
-# if [[ "$distribVersion" == 8* ]]; then
-#         PKG+=" ncurses-compat-libs"
-# fi
-# fi
-# if [ -z "$without_python" ]; then
-#         case "$distribVersion" in
-#                 7*) PKG+=" python3 freetype libgfortran libgomp";;
-#                 8*) PKG+=" python2 python36 freetype libgfortran libgomp";;
-#         esac
-# fi
-
 # Default package manager in Centos 7 is YUM
+- name: Installing sudo package
+  yum:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
+      - sudo
+
 - name: Enable EPEL Repository on CentOS 7
   become: true
   yum:
@@ -19,6 +16,14 @@
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
 
 # Default package manager in Centos 8 is DNF
+- name: Installing sudo package
+  dnf:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
+      - sudo
+
 - name: Enable EPEL Repository on CentOS 8
   become: true
   dnf:
