Wait for service instead of failing

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -100,4 +100,8 @@
     name: "dataiku.{{datadir}}"
     state: started
     enabled: true
+  register: dssServiceDetails
+  until: dssServiceDetails.status.ActiveState == "active"
+  retries: 5
+  delay: 30
   tags: [dss]
