--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -10,6 +10,8 @@ platforms:
   - name: molecule-centos7
     image: ${MOLECULE_IMAGE:-docker.io/centos:7}
     pre_build_image: false
+    privileged: true
+    volumes: '/sys/fs/cgroup:/sys/fs/cgroup'
 provisioner:
   name: ansible
   inventory:
