Added python-six package required by dataiku-api-client-python still using python2

--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -52,6 +52,7 @@
       - libgomp
       - python3-setuptools
       - python-setuptools
+      - python-six
 
 - name: Installing CentOS 7 sepecific packages
   become: true
