Added missing python-requests

--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -53,6 +53,7 @@
       - python3-setuptools
       - python-setuptools
       - python-six
+      - python-requests
 
 - name: Installing CentOS 7 sepecific packages
   become: true
