--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -54,6 +54,7 @@
       - python-setuptools
       - python-six
       - python-requests
+      - python-dateutil
 
 - name: Installing CentOS 7 sepecific packages
   become: true
