--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -15,6 +15,7 @@
     name: epel-release
     state: latest
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
+  tags: [molecule-idempotence-notest]
 
 # Default package manager in Centos 8 is DNF
 - name: Installing sudo package
@@ -32,6 +33,7 @@
     name: epel-release
     state: latest
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
+  tags: [molecule-idempotence-notest]
 
 - name: Installing dependencies
   become: true
