--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -16,6 +16,15 @@ platforms:
     tty: True
     env:
       container: docker
+  - name: molecule-centos8
+    image: ${MOLECULE_IMAGE:-docker.io/centos:8}
+    privileged: true
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    command: "/usr/sbin/init"
+    tty: True
+    env:
+      container: docker
 provisioner:
   name: ansible
   inventory:
