--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -53,10 +53,6 @@
       - libgfortran 
       - libgomp
       - python3-setuptools
-      - python-setuptools
-      - python-six
-      - python-requests
-      - python-dateutil
 
 - name: Installing CentOS 7 sepecific packages
   become: true
@@ -66,6 +62,10 @@
   vars:
     packages:
       - python3
+      - python-setuptools
+      - python-six
+      - python-requests
+      - python-dateutil
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
 
 - name: Installing CentOS 8 sepecific packages
@@ -76,6 +76,9 @@
   vars:
     packages:
       - ncurses-compat-libs
-      - python2 
+      - python2
+      - python2-setuptools
+      - python2-six
+      - python2-requests
       - python36 
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
