Role compatibility with Centos 7 & Centos 8 (#7)
* Added centos 7 & 8 test with molecule
* Moved sudo install in OS specific pre_install files
* Added missing centos version check
* Added missing python-setuptools and factorized dependencies install
* Added python-six, python-requests,  python-dateutil packages required by dataiku-api-client-python still using python2
* Explicit python2-* for centos8 python 2 packages
* Do not test idempotence of tasks adding epel repo
* Created custom centos 8 dockerfile to get rid of AppStream repo error
* Added compatible OS and improved documentation

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -7,6 +7,25 @@ platforms:
   - name: molecule-debian10
     image: ${MOLECULE_IMAGE:-docker.io/debian:buster}
     pre_build_image: false
+  - name: molecule-centos7
+    image: ${MOLECULE_IMAGE:-docker.io/centos:7}
+    privileged: true
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    command: "/usr/sbin/init"
+    tty: True
+    env:
+      container: docker
+  - name: molecule-centos8
+    image: ${MOLECULE_IMAGE:-docker.io/centos:8}
+    dockerfile: Dockerfile-centos8.j2
+    privileged: true
+    volumes:
+      - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    command: "/usr/sbin/init"
+    tty: True
+    env:
+      container: docker
 provisioner:
   name: ansible
   inventory:
