--- a/tasks/pre_install/centos.yml
+++ b/tasks/pre_install/centos.yml
@@ -1,30 +1,39 @@
 ---
-# if [[ "$distribVersion" == 8* ]]; then
-#         PKG+=" ncurses-compat-libs"
-# fi
-# fi
-# if [ -z "$without_python" ]; then
-#         case "$distribVersion" in
-#                 7*) PKG+=" python3 freetype libgfortran libgomp";;
-#                 8*) PKG+=" python2 python36 freetype libgfortran libgomp";;
-#         esac
-# fi
-
 # Default package manager in Centos 7 is YUM
+- name: Installing sudo package
+  yum:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
+      - sudo
+  when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
+
 - name: Enable EPEL Repository on CentOS 7
   become: true
   yum:
     name: epel-release
     state: latest
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
+  tags: [molecule-idempotence-notest]
 
 # Default package manager in Centos 8 is DNF
+- name: Installing sudo package
+  dnf:
+    name: "{{ packages }}"
+    state: present
+  vars:
+    packages:
+      - sudo
+  when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
+
 - name: Enable EPEL Repository on CentOS 8
   become: true
   dnf:
     name: epel-release
     state: latest
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
+  tags: [molecule-idempotence-notest]
 
 - name: Installing dependencies
   become: true
@@ -40,6 +49,10 @@
       - unzip
       - zip
       - java-1.8.0-openjdk
+      - freetype 
+      - libgfortran 
+      - libgomp
+      - python3-setuptools
 
 - name: Installing CentOS 7 sepecific packages
   become: true
@@ -48,10 +61,11 @@
     state: present
   vars:
     packages:
-      - python3 
-      - freetype 
-      - libgfortran 
-      - libgomp
+      - python3
+      - python-setuptools
+      - python-six
+      - python-requests
+      - python-dateutil
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '7'
 
 - name: Installing CentOS 8 sepecific packages
@@ -62,9 +76,9 @@
   vars:
     packages:
       - ncurses-compat-libs
-      - python2 
+      - python2
+      - python2-setuptools
+      - python2-six
+      - python2-requests
       - python36 
-      - freetype 
-      - libgfortran 
-      - libgomp
   when: ansible_facts['os_family'] == 'RedHat' and ansible_facts ['distribution_major_version'] == '8'
