Changed dependency name to match ansible-galaxy requirements

--- a/requirements.yml
+++ b/requirements.yml
@@ -3,5 +3,5 @@
   name: dataiku-api-client-python
   version: release/8.0
 - src: git+https://github.com/dataiku/dataiku-ansible-modules
-  name: dataiku-ansible-modules
+  name: dataiku.dataiku-ansible-modules
   version: master
