--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -2,7 +2,7 @@
 - name: Download DSS
   become: true
   become_user: "{{ dss_service_user }}"
-  get_url:
+  ansible.builtin.get_url:
     url: "{{ dss_base_repository_url }}/{{ dss_version }}/dataiku-dss-{{ dss_version }}.tar.gz"
     dest: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}.tar.gz"
   tags: [setup, dss-setup]
@@ -10,7 +10,7 @@
 - name: Unarchive DSS
   become: true
   become_user: "{{ dss_service_user }}"
-  unarchive:
+  ansible.builtin.unarchive:
     src: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}.tar.gz"
     dest: "{{ dss_install_dir_location }}"
     creates: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}"
@@ -19,7 +19,7 @@
 
 - name: Install DSS dependencies
   become: true
-  shell:
+  ansible.builtin.shell:
     cmd: |
       {{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/scripts/install/install-deps.sh -yes 2>&1 > /tmp/dss-install-deps.log
       touch {{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/scripts/install/DEPS-INSTALLED
@@ -28,7 +28,7 @@
 
 - name: Install Dataiku python API
   become: true
-  pip:
+  ansible.builtin.pip:
     name: "{{ dataiku_python_api_package }}"
     state: latest
     executable: pip3
@@ -38,7 +38,7 @@
 - name: Run the Dataiku DSS installer
   become: true
   become_user: "{{ dss_service_user }}"
-  command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/installer.sh -d {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} -p {{port}} -t {{type}}"
+  ansible.builtin.command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/installer.sh -d {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} -p {{port}} -t {{type}}"
   args:
     creates: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/dss-version.json"
   tags: [dss]
@@ -46,14 +46,14 @@
 - name: Copy license file
   become: true
   become_user: "{{ dss_service_user }}"
-  copy:
+  ansible.builtin.copy:
     src: "{{ dss_license_file }}"
     dest: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/config/license.json"
   tags: [dss]
 
 - name: Install boot service
   become: true
-  command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/scripts/install/install-boot.sh -n {{ datadir }} {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} dataiku"
+  ansible.builtin.command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/scripts/install/install-boot.sh -n {{ datadir }} {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} dataiku"
   args:
     creates: "/etc/init.d/dataiku.{{ datadir }}"
   tags: [dss]
@@ -62,16 +62,16 @@
   when: configure_spark|bool
   become: true
   become_user: "{{ dss_service_user }}"
-  get_url:
-    url: "{{ dss_base_repository_url }}/{{ dss_version }}/{{dss_hadoop_package}}"
-    dest: "{{ dss_install_dir_location }}/{{dss_hadoop_package}}"
+  ansible.builtin.get_url:
+    url: "{{ dss_base_repository_url }}/{{ dss_version }}/{{ dss_hadoop_package }}"
+    dest: "{{ dss_install_dir_location }}/{{ dss_hadoop_package }}"
   tags: [setup, dss-setup]
 
 - name: Install standalone Hadoop support
   when: configure_spark|bool
   become: true
   become_user: "{{ dss_service_user }}"
-  command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/dssadmin install-hadoop-integration -standaloneArchive {{ dss_install_dir_location }}/{{dss_hadoop_package}}"
+  ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/dssadmin install-hadoop-integration -standaloneArchive {{ dss_install_dir_location }}/{{ dss_hadoop_package }}"
   args:
     creates: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/env-hadoop.sh"
   tags: [dss]
@@ -80,23 +80,23 @@
   when: configure_spark|bool
   become: true
   become_user: "{{ dss_service_user }}"
-  get_url:
-    url: "{{ dss_base_repository_url }}/{{ dss_version }}/{{dss_spark_package}}"
-    dest: "{{ dss_install_dir_location }}/{{dss_spark_package}}"
+  ansible.builtin.get_url:
+    url: "{{ dss_base_repository_url }}/{{ dss_version }}/{{ dss_spark_package }}"
+    dest: "{{ dss_install_dir_location }}/{{ dss_spark_package }}"
   tags: [setup, dss-setup]
 
 - name: Install standalone Spark support
   when: configure_spark|bool
   become: true
   become_user: "{{ dss_service_user }}"
-  command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/dssadmin install-spark-integration -standaloneArchive {{ dss_install_dir_location }}/{{dss_spark_package}}"
+  ansible.builtin.command: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/dssadmin install-spark-integration -standaloneArchive {{ dss_install_dir_location }}/{{ dss_spark_package }}"
   args:
     creates: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/bin/env-spark.sh"
   tags: [dss]
 
 - name: Start the studios
   become: true
-  service:
+  ansible.builtin.service:
     name: "dataiku.{{ datadir }}"
     state: started
     enabled: true
