--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -12,7 +12,7 @@ platforms:
     privileged: true
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    command: "/usr/sbin/init"
+    ansible.builtin.command: "/usr/sbin/init"
     tty: True
     env:
       container: docker
@@ -22,7 +22,7 @@ platforms:
     privileged: true
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
-    command: "/usr/sbin/init"
+    ansible.builtin.command: "/usr/sbin/init"
     tty: True
     env:
       container: docker
