Corrected lint issues and revert docker shell command

--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -5,6 +5,7 @@
   ansible.builtin.get_url:
     url: "{{ dss_base_repository_url }}/{{ dss_version }}/dataiku-dss-{{ dss_version }}.tar.gz"
     dest: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}.tar.gz"
+    mode: '644'
   tags: [setup, dss-setup]
 
 - name: Unarchive DSS
@@ -38,7 +39,7 @@
 - name: Run the Dataiku DSS installer
   become: true
   become_user: "{{ dss_service_user }}"
-  ansible.builtin.command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/installer.sh -d {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} -p {{port}} -t {{type}}"
+  ansible.builtin.command: "{{ dss_install_dir_location }}/dataiku-dss-{{ dss_version }}/installer.sh -d {{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }} -p {{ port }} -t {{ type }}"
   args:
     creates: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/dss-version.json"
   tags: [dss]
@@ -49,6 +50,7 @@
   ansible.builtin.copy:
     src: "{{ dss_license_file }}"
     dest: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}/{{ datadir }}/config/license.json"
+    mode: '644'
   tags: [dss]
 
 - name: Install boot service
@@ -65,6 +67,7 @@
   ansible.builtin.get_url:
     url: "{{ dss_base_repository_url }}/{{ dss_version }}/{{ dss_hadoop_package }}"
     dest: "{{ dss_install_dir_location }}/{{ dss_hadoop_package }}"
+    mode: '644'
   tags: [setup, dss-setup]
 
 - name: Install standalone Hadoop support
@@ -83,6 +86,7 @@
   ansible.builtin.get_url:
     url: "{{ dss_base_repository_url }}/{{ dss_version }}/{{ dss_spark_package }}"
     dest: "{{ dss_install_dir_location }}/{{ dss_spark_package }}"
+    mode: '644'
   tags: [setup, dss-setup]
 
 - name: Install standalone Spark support
