--- a/tasks/pre_install.yml
+++ b/tasks/pre_install.yml
@@ -1,6 +1,6 @@
 ---
 - name: Set per-host facts
-  set_fact:
+  ansible.builtin.set_fact:
     dss_node_hostname: "{{ ansible_fqdn if dss_node_poll_fqdn else ansible_host }}"
   tags: [setup, dss-setup, dss]
 
@@ -22,7 +22,7 @@
   become: true
   pam_limits:
     domain: "{{ dss_service_user }}"
-    limit_item: "{{item}}"
+    limit_item: "{{ item }}"
     limit_type: "-"
     value: 65536
   loop:
@@ -35,7 +35,7 @@
   ansible.builtin.user:
     name: "{{ dss_service_user }}"
     home: "{{ dss_service_user_home_basedir }}/{{ dss_service_user }}"
-    shell: "{{dss_service_user_shell}}"
+    shell: "{{ dss_service_user_shell }}"
     state: present
   tags: [setup, dss-setup]
 
