--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -28,13 +28,9 @@ platforms:
       container: docker
 provisioner:
   name: ansible
-  inventory:
-    host_vars:
-      instance:
-        ansible_python_interpreter: "/usr/bin/python3"
+  env:
+    ansible_python_interpreter: "/usr/bin/python3"
 verifier:
   name: ansible
-  inventory:
-    host_vars:
-      instance:
-        ansible_python_interpreter: "/usr/bin/python3"
+  env:
+    ansible_python_interpreter: "/usr/bin/python3"
