Removed log configuration from verifier

--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -28,11 +28,10 @@ platforms:
       container: docker
 provisioner:
   name: ansible
-  log: true
+  log: True
   env:
     ansible_python_interpreter: "/usr/bin/python3"
 verifier:
   name: ansible
-  log: true
   env:
     ansible_python_interpreter: "/usr/bin/python3"
