--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -5,10 +5,10 @@ driver:
   name: docker
 platforms:
   - name: molecule-debian10
-    image: ${MOLECULE_IMAGE:-docker.io/debian:buster}
+    image: docker.io/debian:buster
     pre_build_image: false
   - name: molecule-centos7
-    image: ${MOLECULE_IMAGE:-docker.io/centos:7}
+    image: docker.io/centos:7
     privileged: true
     volumes:
       - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
@@ -17,7 +17,8 @@ platforms:
     env:
       container: docker
   - name: molecule-centos8
-    image: ${MOLECULE_IMAGE:-docker.io/centos:8}
+    image: docker.io/centos:8
+    pre_build_image: false
     dockerfile: Dockerfile-centos8.j2
     privileged: true
     volumes:
