--- a/molecule/default/converge.yml
+++ b/molecule/default/converge.yml
@@ -2,9 +2,15 @@
 - name: Converge
   hosts: all
   tasks:
-    - name: "Include datarsense.dataikudss"
+    - name: "Test DSS install"
       ansible.builtin.include_role:
         name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
       vars:
         dss_version: "10.0.7"
+        configure_ldap_settings: "true"
+    - name: "Test DSS upgrade"
+      ansible.builtin.include_role:
+        name: "{{ lookup('env', 'MOLECULE_PROJECT_DIRECTORY') | basename }}"
+      vars:
+        dss_version: "11.1.1"
         configure_ldap_settings: "true"
