--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,10 +3,9 @@
 - name: Check packages version consistency
   ansible.builtin.fail:
     msg: Hadoop or Spark package version does not match DSS version {{ dss_version }}
-  when: configure_spark|bool and dss_version in dss_hadoop_package and dss_version in dss_spark_package
+  when: (configure_spark|bool) and (dss_hadoop_package is search(dss_version)) and (dss_spark_package is search(dss_version))
 
 # Run role tasks
 - import_tasks: pre_install.yml
 - import_tasks: install.yml
-- import_tasks: upgrade.yml
 - import_tasks: config.yml
